02-04-2025 all data uploaded

--- a/website-designing/module-1-fundmentals/what is protocol.html
+++ b/website-designing/module-1-fundmentals/what is protocol.html
@@ -4,7 +4,11 @@ what is protocol ?
   examples : http | https | smtp | pop | ftp
    
   URL : https://www.hdfcbank.com/
-
+  smtp: simple mail transfer protocol
+  pop : post office protocol
+  ftp:file transfer protocol
+  
+  
 
 
 -->
