--- a/website-designing/assingment/module-3/html/lab/Question4.html
+++ b/website-designing/assingment/module-3/html/lab/Question4.html
@@ -10,6 +10,8 @@
 </head>
 <body>
     
+    <!--  <a href=""></a>  used for hyperlinks to redirect one page to another page -->
+      
     <h1><a href="https://onlinesbi.sbi/" target="_blank">Click to open SBI</a></h1>
 </body>
 </html>
