10-04-2025 all data uploaded

--- a/website-designing/module-2-html&html5/html-tag/paired-tag/html-list.html
+++ b/website-designing/module-2-html&html5/html-tag/paired-tag/html-list.html
@@ -9,8 +9,16 @@
     <script src='main.js'></script>
 </head>
 <body>
-    <p><b>Name :</b>Brijesh kumar pandey</p>
-    <p><b>Email :</b><a href="mailto:bkpandey.pandey@gmail.com">bkpandey.pandey@gmail.com</a></p>
-    <b>Address : 150 feet ring road rajkot <br>near indira circle jalaram plot-2 360001</b>
+    <!-- 
+    what is html list ?
+     html list provides list of any items in order list or unorder list or nested list.
+
+     types of list..
+
+     a) order list   <ol></ol>
+     b) unorder list <ul> </ul>
+     c) nested list  <ol> <ul></ul> </ol>
+    
+    -->
 </body>
 </html>
